# stm32_lora

./: .clang-tidy  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  Readme.md  lora.ioc
.github/workflows/: cmake.yml
Core/Inc/: FreeRTOSConfig.h  crc.h  dma.h  gpio.h  main.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h  usart.h  utility.h
Core/Src/: crc.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  syscalls.c  sysmem.c  system_stm32f1xx.c  tim.c  usart.c  utility.c
SX1278/: sx1278-Hal.cpp  sx1278-LoRaMisc.cpp  sx1278.cpp
SX1278/include/: radioConfig.h  sx1278-Hal.h  sx1278-LoRaMisc.h  sx1278.h
cmake/: FindCMSIS.cmake  stm32_gcc.cmake
cmake/stm32/: common.cmake  utilities.cmake
tasks/: tasks.cpp
tasks/app/: chat.cpp
tasks/include/: tasks.h
tasks/include/app/: chat.h
tasks/include/lib/: BLE.h  Wifi.h
tasks/include/service/lora/: lora.h
tasks/include/service/watchdog/: watchdog.h
tasks/include/service/web/: config.h  data_link.h  lora.h  network.h  transport.h  web.h
tasks/lib/: BLE.cpp  Wifi.cpp  printf.c
tasks/service/lora/: lora.cpp
tasks/service/watchdog/: watchdog.cpp
tasks/service/web/: data_link.cpp  lora.cpp  network.cpp  transport.cpp  web.cpp
utility/: com.ps1
